# ROS2-gazebo-Project

./: .gitignore  Liens_Vidéos_Equipe_105.txt  ReadMe.md  docker-compose.yml  launch.sh  launch_gazebo.sh  launch_robot.sh  launch_station.sh  package-lock.json
Client/: angular.json  tsconfig.json
Client/src/: proxy.conf.json
backend/: .env  Dockerfile.backend  package-lock.json  package.json
backend/src/: app.module.ts  ros.service.spec.ts  ros.service.ts
client/: Dockerfile  Dockerfile.client  angular.json  eslint.config.js  package-lock.json  package.json
client/src/: index.html
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
project_ws/: .gitignore  Dockerfile.simulation  ros-installed-packages.txt
project_ws/src/ros_gz_example_application/: CMakeLists.txt  battery_manager.py  drive_mode_service.py  identification.py  identify_service.py  mission_service.py  package.xml  random_movement.py
project_ws/src/ros_gz_example_application/ros_gz_example_application/: battery_manager.py  identify_service.py  mission_service.py
server/: .env  Dockerfile  logs.json  package-lock.json  package.json
server-flask/: app.py
server/install/: local_setup.sh  setup.sh
server/log/: latest_build
server/missions_logs/: mission_3_2024-10-28,-21-03.json  mission_3_2024-10-29,-11-15.json  mission_3_2024-10-29,-11-20.json  mission_3_2024-10-29,-11-22.json  mission_3_2024-10-29,-11-29.json  mission_3_2024-10-29,-11-32.json  mission_3_2024-10-29,-11-44.json  mission_3_2024-10-29,-11-51.json  mission_3_2024-10-29,-11-53.json  mission_3_2024-10-29,-12-00.json  mission_3_2024-10-29,-12-10.json  mission_3_2024-10-29,-12-13.json  mission_3_2024-10-29,-12-18.json  mission_3_2024-10-29,-12-20.json  mission_4_2024-10-28,-21-03.json  mission_4_2024-10-29,-11-15.json  mission_4_2024-10-29,-11-20.json  mission_4_2024-10-29,-11-29.json  mission_4_2024-10-29,-11-44.json  mission_4_2024-10-29,-11-45.json  mission_4_2024-10-29,-11-51.json  mission_4_2024-10-29,-11-53.json  mission_4_2024-10-29,-12-00.json  (+2 more)
server/src/: main.ts  (+5 more)
(+162 files in other folders)
